--- a/dashboard-customize.html
+++ b/dashboard-customize.html
@@ -393,12 +393,12 @@
                   Dashboard
                 </div>
                 <div class="adapter-modal-bottom-row">
-                  <div style="margin: 0px;">
+                  <div class="grid-auto" style="margin: 0px;">
                       <span>This dashboard has unsaved changes.</span>
                       <button id="btn_save" type="button" class="theme-btn graydient-primary-btn">
                           Save
                       </button>
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
+                      <button id="btn_discard" type="button" class="theme-btn-b btn-secondary" data-dismiss="modal">Discard</button>
                   </div>
               </div>
               </div>
@@ -407,7 +407,7 @@
                 <div class="dashboard-grid-widgets mt-0" id="macy-container">
                   <div class="widget-box">
                     <div class="widget-icons-div">
-                      <a href="#" id="link_refreshIcon"><img src="images/plus.png" /></a>
+                      <a href="#" id="link_plusIcon"><img src="images/plus.png" /></a>
                     </div>
                     <div class="widget-icons-bottom-div">                                          
                       <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
@@ -417,13 +417,9 @@
                           <div class="pointer-top-img">
                             <img src="images/dropdown_pointer_top.png" />
                           </div>
-                          <a class="dropdown-item" href="#">Edit</a>
-                          <a class="dropdown-item" href="#">Delete</a>
-                        <a class="dropdown-item" href="#">Apply Filter</a>
-                        <a href="#" class="dropdown-item">Set Refresh Rate</a>
-                        <a href="#" class="dropdown-item">Clone</a>
-                        <a href="#" class="dropdown-item">Export To CSV</a>                     
-                      
+                          <a class="dropdown-item" href="#">Small</a>
+                          <a class="dropdown-item" href="#">Medium</a>
+                        <a class="dropdown-item" href="#">Large</a>
                       </div>
 
                     </div>
@@ -444,7 +440,7 @@
 
                   <div class="widget-box">
                     <div class="widget-icons-div">
-                      <a href="#" id="link_refreshIcon"><img src="images/plus.png" /></a>
+                      <a href="#" id="link_plusIcon"><img src="images/plus.png" /></a>
                     </div>
                     <div class="widget-icons-bottom-div">                                          
                       <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
@@ -454,13 +450,9 @@
                           <div class="pointer-top-img">
                             <img src="images/dropdown_pointer_top.png" />
                           </div>
-                          <a class="dropdown-item" href="#">Edit</a>
-                          <a class="dropdown-item" href="#">Delete</a>
-                        <a class="dropdown-item" href="#">Apply Filter</a>
-                        <a href="#" class="dropdown-item">Set Refresh Rate</a>
-                        <a href="#" class="dropdown-item">Clone</a>
-                        <a href="#" class="dropdown-item">Export To CSV</a>                     
-                      
+                          <a class="dropdown-item" href="#">Small</a>
+                          <a class="dropdown-item" href="#">Medium</a>
+                        <a class="dropdown-item" href="#">Large</a>
                       </div>
 
                     </div>
