--- a/share-dashboard.html
+++ b/share-dashboard.html
@@ -102,85 +102,85 @@
                           <ul class="dropdown-connectors-list mCustomScrollbar" data-mcs-theme="minimal-dark">
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user" type="checkbox" />
                               </div>
                               <div>User</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user1" type="checkbox" />
                               </div>
                               <div>User 1</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user2" type="checkbox" />
                               </div>
                               <div>User 2</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user3" type="checkbox" />
                               </div>
                               <div>User 3</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user4" type="checkbox" />
                               </div>
                               <div>User 4</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user5" type="checkbox" />
                               </div>
                               <div>User 5</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user6" type="checkbox" />
                               </div>
                               <div>User 6</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user7" type="checkbox" />
                               </div>
                               <div>User 7</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user8" type="checkbox" />
                               </div>
                               <div>User 8</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user9" type="checkbox" />
                               </div>
                               <div>User 9</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user10" type="checkbox" />
                               </div>
                               <div>User 10</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user11" type="checkbox" />
                               </div>
                               <div>User 11</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user12" type="checkbox" />
                               </div>
                               <div>User 12</div>
                             </li>
                             <li>
                               <div class="">
-                                <input type="checkbox" />
+                                <input id="chk_user13" type="checkbox" />
                               </div>
                               <div>User 13</div>
                             </li>
