--- a/dashboard-customize.html
+++ b/dashboard-customize.html
@@ -407,7 +407,7 @@
                 <div class="dashboard-grid-widgets mt-0" id="macy-container">
                   <div class="widget-box">
                     <div class="widget-icons-div">
-                      <a href="#" id="link_plusIcon"><img src="images/plus.png" /></a>
+                      <a href="#" id="link_removeIcon"><img src="images/remove-circle-icon.svg" /></a>
                     </div>
                     <div class="widget-icons-bottom-div">                                          
                       <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
@@ -440,7 +440,7 @@
 
                   <div class="widget-box">
                     <div class="widget-icons-div">
-                      <a href="#" id="link_plusIcon"><img src="images/plus.png" /></a>
+                      <a href="#" id="link_removeIcon"><img src="images/remove-circle-icon.svg" /></a>
                     </div>
                     <div class="widget-icons-bottom-div">                                          
                       <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
