--- a/share-dashboard.html
+++ b/share-dashboard.html
@@ -77,7 +77,7 @@
                                             <img src="images/modal-close.svg" />
                                         </span>
                                     </button>
-                                </div>
+                                </div>0
                             </div>
 
                             <div class="adapter-modal-content-box pb-3">
