--- a/date-time.html
+++ b/date-time.html
@@ -659,11 +659,11 @@
 
 
                                   </div> -->
-                                  <div class="checkbox-with-text-row mt-4">
+                                  <!-- <div class="checkbox-with-text-row mt-4">
                                     <div class="label-div mr-3 mb-3">
                                       Use Proxy
                                     </div>
-                                  </div>
+                                  </div> -->
                                   <div class="summary-details-row d-flex mt-4">
                                     <div class="col-lg-6">
                                         <div class="four-dropdwon-div">
