--- a/mail-server.html
+++ b/mail-server.html
@@ -708,9 +708,13 @@
                                             <label>Default Sorting Order:</label>
                                             <input id="input_defaultSortingOrder" type="text" class="form-control" placeholder="">
                                           </div>
-                                          <div class="form-group">
+                                          <div class="form-group relative">
                                             <label>SMTP Password:</label>
                                             <input id="input_defaultSortingOrder" type="text" class="form-control" placeholder="">
+                                            <div class="eyes-icon-password">
+                                              <input type="checkbox" name="show_password" id="showpassord">
+                                              <label for="showpassord" class="show-password-icon">&nbsp;</label>
+                                            </div>
                                           </div>
                                           <div class="form-group hidden">
                                             <label>Default Sorting Order:</label>
