--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -788,12 +788,12 @@
                    <div class="dropdown-select-native">
                     <select id="ddl_selectQuery" name="" class="custom-select">
                      <option value="">Field</option>
-                     <option value="">Connector</option>
+                     <option value="" selected >Connector</option>
                     </select>
                    </div>
                   </div>
   
-                  <div class="form-group">
+                  <div class="form-group hidden">
                    <label>&nbsp;</label>
                    <div class="dropdown-select-native">
                     <select id="ddl_selectQuery" name="" class="custom-select">
@@ -854,16 +854,7 @@
                          <div></div>
                         </div>
   
-                        <div class="widget-checkbox-filter-row">
-                         <div class="widget-checkbox-filter-box">
-                          <div>
-                           <input type="checkbox">
-                          </div>
-                          <div>Uses Filter</div>
-                         </div>
-  
-                         <div></div>
-                        </div>
+                        
                        
                        </div>
                       </div>
