--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -960,12 +960,12 @@
                               Count
                           </div>
                           <div class="width-auto">
-                              <input id="rbt_average"  type="radio" name="b" value="b"></div>
+                              <input id="rbt_average"  type="radio" name="a" value="a"></div>
                           <div class="label-div  mr-3">
                               Average
                           </div>
                           <div class="width-auto">
-                            <input id="rbt_sum" type="radio" name="c" value="c"></div>
+                            <input id="rbt_sum" type="radio" name="a" value="a"></div>
                         <div class="label-div ">
                             Sum
                         </div>
@@ -976,13 +976,9 @@
   
                  <div class="user-group-checked-row">
                   <div class="form-group">
-                   <label>Query</label>
+                   <label>Bottom Title</label>
                    <div class="dropdown-select-native">
-                    <select id="ddl_selectQuery" name="" class="custom-select">
-                      <option value="">Select Query</option>
-                      <option value="">Select Query 1</option>
-                      <option value="">Select Query 2</option>
-                    </select>
+                    <input type="text" id="input_bottomTitle" class="form-control" placeholder="">
                    </div>
                   </div>
   
