--- a/create-widget-new.html
+++ b/create-widget-new.html
@@ -234,12 +234,22 @@
                                                                             1" />
                 </div>
 
-                <div class="dropdown-select-native">
-                 <select id="ddl_selectQuery" name="" class="custom-select">
-                  <option value="">Select Query</option>
-                  <option value="">Select Query 1</option>
-                  <option value="">Select Query 2</option>
-                 </select>
+                <div class="dropdown">
+                  <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="heading-dropdown-dash">Select Query
+                      </span>
+                      <img src="images/down-arrow.svg" style="
+                            padding-bottom: 0px;
+                            height: 13px;
+                            width: 13px;
+                          " width="13" height="13">
+                  </a>
+                  <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                      <a class="dropdown-item" href="#"><strong>System Dashboard</strong></a>
+                      <a class="dropdown-item" href="#">Dashboard 1</a>
+                    <a class="dropdown-item" href="#">Dashboard 2</a>
+                    <a class="dropdown-item" href="#"><img src="images/icon-plus-normal.svg" style="">Add Dashboard</a>
+                  </div>
                 </div>
 
                 <div class="plus-minus-btns">
@@ -257,12 +267,22 @@
                                                                             1" />
                 </div>
 
-                <div class="dropdown-select-native">
-                 <select id="ddl_selectQuery" name="" class="custom-select">
-                  <option value="">Select Query</option>
-                  <option value="">Select Query 1</option>
-                  <option value="">Select Query 2</option>
-                 </select>
+                <div class="dropdown">
+                  <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="heading-dropdown-dash">Select Query
+                      </span>
+                      <img src="images/down-arrow.svg" style="
+                            padding-bottom: 0px;
+                            height: 13px;
+                            width: 13px;
+                          " width="13" height="13">
+                  </a>
+                  <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                      <a class="dropdown-item" href="#"><strong>System Dashboard</strong></a>
+                      <a class="dropdown-item" href="#">Dashboard 1</a>
+                    <a class="dropdown-item" href="#">Dashboard 2</a>
+                    <a class="dropdown-item" href="#"><img src="images/icon-plus-normal.svg" style="">Add Dashboard</a>
+                  </div>
                 </div>
 
                 <div class="plus-minus-btns">
@@ -280,12 +300,22 @@
                                                                             1" />
                 </div>
 
-                <div class="dropdown-select-native">
-                 <select id="ddl_selectQuery" name="" class="custom-select">
-                  <option value="">Select Query</option>
-                  <option value="">Select Query 1</option>
-                  <option value="">Select Query 2</option>
-                 </select>
+                <div class="dropdown">
+                  <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="heading-dropdown-dash">Select Query
+                      </span>
+                      <img src="images/down-arrow.svg" style="
+                            padding-bottom: 0px;
+                            height: 13px;
+                            width: 13px;
+                          " width="13" height="13">
+                  </a>
+                  <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                      <a class="dropdown-item" href="#"><strong>System Dashboard</strong></a>
+                      <a class="dropdown-item" href="#">Dashboard 1</a>
+                    <a class="dropdown-item" href="#">Dashboard 2</a>
+                    <a class="dropdown-item" href="#"><img src="images/icon-plus-normal.svg" style="">Add Dashboard</a>
+                  </div>
                 </div>
 
                 <div class="plus-minus-btns">
@@ -477,13 +507,23 @@
 
                <div class="user-group-checked-row">
                 <div class="form-group">
-                 <div class="dropdown-select-native">
-                  <select id="ddl_selectQuery" name="" class="custom-select">
-                   <option value="">Select Query</option>
-                   <option value="">Select Query 1</option>
-                   <option value="">Select Query 2</option>
-                  </select>
-                 </div>
+                  <div class="dropdown">
+                  <a class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="heading-dropdown-dash">Select Query
+                      </span>
+                      <img src="images/down-arrow.svg" style="
+                            padding-bottom: 0px;
+                            height: 13px;
+                            width: 13px;
+                          " width="13" height="13">
+                  </a>
+                  <div class="dropdown-menu dashboard-title-menu-dropdown" aria-labelledby="dropdownMenuButton" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
+                      <a class="dropdown-item" href="#"><strong>System Dashboard</strong></a>
+                      <a class="dropdown-item" href="#">Dashboard 1</a>
+                    <a class="dropdown-item" href="#">Dashboard 2</a>
+                    <a class="dropdown-item" href="#"><img src="images/icon-plus-normal.svg" style="">Add Dashboard</a>
+                  </div>
+                </div>
                 </div>
                 <div class="form-group hidden">
                   <div class="dropdown-select-native">
@@ -765,10 +805,43 @@
                   </div>
   
                   <div class="legend-goes-here">
-                   <img src="images/pie-chart.png">
+                    <div class="list-chart-div">
+                      <ul>
+                        <li>
+                          <div><div class="legend-yellow"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+                        <li>
+                          <div><div class="legend-red"></div></div>
+                          <div>Duis aute irure dolor</div>
+                          <div>232</div>
+                        </li>
+                        <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Uis aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+                        <li>
+                          <div><div class="legend-yellow"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+                        <li>
+                          <div><div class="legend-red"></div></div>
+                          <div>Duis aute irure dolor</div>
+                          <div>232</div>
+                        </li>
+                        <li>
+                          <div><div class="legend-green"></div></div>
+                          <div>Aute irure dolor</div>
+                          <div>92</div>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
   
-                  <div class="legend-guide">
+                  <!-- <div class="legend-guide">
                    <div class="legend-guide-item-row">
                     <div class="legend-yellow"></div>
                     <div>Label 1</div>
@@ -781,7 +854,7 @@
                     <div class="legend-green"></div>
                     <div>Label 3</div>
                    </div>
-                  </div>
+                  </div> -->
                  </div>
                 </div>
   
@@ -909,14 +982,18 @@
   
                  <div class="legend-box">
                   <div class="legend-box-heading">
-                   Assets Distribution
+                    OS Distribution
                   </div>
   
                   <div class="legend-goes-here">
-                   <img src="images/pie-chart.png">
+                   <div class="tile-box">
+                      <h5>Lorem ipsum dolor</h5>
+                      <h2>1057</h2>
+                      <p>Duis aute irure dolor</p>
+                   </div>
                   </div>
   
-                  <div class="legend-guide">
+                  <!-- <div class="legend-guide">
                    <div class="legend-guide-item-row">
                     <div class="legend-yellow"></div>
                     <div>Label 1</div>
@@ -929,7 +1006,7 @@
                     <div class="legend-green"></div>
                     <div>Label 3</div>
                    </div>
-                  </div>
+                  </div> -->
                  </div>
                 </div>
   
@@ -996,7 +1073,7 @@
   
                  <div class="accordion-group accordion create-widget-accordion-wrapper">
                   <div class="accordion-heading">
-                   <a class="accordion-toggle" id="link_additionalSettings" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour" aria-expanded="true">
+                   <a class="accordion-toggle" id="link_additionalSettings" data-toggle="collapse" data-parent="#accordion4" href="#collapseFour" aria-expanded="true">
                     Additional Settings
                     <span>
                       <img class="img-min-icon" src="images/icon_collapse-min.svg">
